# tparser

./: 404.html  LICENSE  README.md  TODO.txt  basic_parser.py  consonants.json  index.html  main.py  mkdocs.yml  objects.inv  parser.py  pyproject.toml  requirements.txt  suffixes.csv  suffixes.json  test_data_eggleston.csv  test_data_swanton.csv  test_results.xlsx  verb.py  vowels.json
config/: griffe2md.toml
docs/: index.md  parser.md  verb.md
parser/: index.html
search/: search_index.json
src/tparser/: __init__.py  basic_parser.py  parser.py  verb.py
src/tparser/data/: alphabet.json  consonants.json  suffixes.json  suffixes_2.json  suffixes_revised.csv
tests/: test_data_eggleston.csv  test_data_swanton.csv
verb/: index.html
